# LessThanTwo

./: .gitignore  boardgame.py  boardgame_util.py  config.py  game.py  lessthantwo.py  lessthantwo_web.py  main.py  pyproject.toml  vueflask.py
config/: default_config.json
lessthantwo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
smallstuff/: smallstuff.py
static/css/: game.css
templates/: __gamemain.j2.html  gamemain.j2.html  header.j2.html  join.j2.html
